--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
     <div class="container-sm">
       <nav class="navbar navbar-expand-lg navbar">
-        <a class="navbar-brand" href="#">Logo</a>
+        <a class="navbar-brand logo" href="#"
+          ><img src="/images/logo.webp" alt=""
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -63,6 +65,27 @@
     </div>
     <!-- Navbar End-->
     <!-- Header End -->
+
+    <!-- Main -->
+    <main>
+      <div class="main-body">
+        <div class="container">
+          <div class="row">
+            <!-- Left Column -->
+            <div class="col-lg-6">
+              
+            </div>
+            <!-- Right Column -->
+            <div class="col-lg-6 main-img-div">
+              <img src="/images/home-image.webp" class="main-img" alt="Your Image" />
+
+              <!-- Empty column on the right -->
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- Main End -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
