Added a few things to the Main body like buttons design is almost complete

--- a/index.html
+++ b/index.html
@@ -73,13 +73,34 @@
           <div class="row">
             <!-- Left Column -->
             <div class="col-lg-6">
-              
+              <div class="main-info">
+                <div class="main-desc">
+                  <h1>
+                    Peşəkar
+                    <br />
+                    <b>CV Hazırlanması</b>
+                  </h1>
+                </div>
+                <div></div>
+              </div>
+              <div>
+                <p>
+                  Azərbaycanda ən sərfəli qiymətlərlə yalnız dizayndan ibarət
+                  deyil, həm də mükəmməl və uğurlu <b>CV hazırlayırıq.</b>
+                </p>
+              </div>
+              <div class="">
+                <button type="submit">Nümunələrə Bax</button>
+                <button type="submit">Əlaqə</button>
+              </div>
             </div>
             <!-- Right Column -->
             <div class="col-lg-6 main-img-div">
-              <img src="/images/home-image.webp" class="main-img" alt="Your Image" />
-
-              <!-- Empty column on the right -->
+              <img
+                src="/images/home-image.webp"
+                class="main-img"
+                alt="Your Image"
+              />
             </div>
           </div>
         </div>
