buttons in main done

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <!-- Left Column -->
             <div class="col-lg-6">
               <div class="main-info">
-                <div class="main-desc">
+                <div class="main-title">
                   <h1>
                     Peşəkar
                     <br />
@@ -83,15 +83,15 @@
                 </div>
                 <div></div>
               </div>
-              <div>
+              <div class="main-desc">
                 <p>
                   Azərbaycanda ən sərfəli qiymətlərlə yalnız dizayndan ibarət
                   deyil, həm də mükəmməl və uğurlu <b>CV hazırlayırıq.</b>
                 </p>
               </div>
-              <div class="">
-                <button type="submit">Nümunələrə Bax</button>
-                <button type="submit">Əlaqə</button>
+              <div class="button-div">
+                <button class="btn btn-primary" type="submit">Nümunələrə Bax</button>
+                <button class="btn btn-danger" type="submit">Əlaqə</button>
               </div>
             </div>
             <!-- Right Column -->
