header main done responsive

--- a/index.html
+++ b/index.html
@@ -90,17 +90,22 @@
                 </p>
               </div>
               <div class="button-div">
-                <button class="btn btn-primary" type="submit">Nümunələrə Bax</button>
+                <button class="btn btn-primary" type="submit">
+                  Nümunələrə Bax
+                </button>
                 <button class="btn btn-danger" type="submit">Əlaqə</button>
               </div>
             </div>
             <!-- Right Column -->
             <div class="col-lg-6 main-img-div">
-              <img
-                src="/images/home-image.webp"
-                class="main-img"
-                alt="Your Image"
-              />
+              <div class="col-md-12">
+                <img
+                  src="/images/home-image.webp"
+                  class="main-img"
+                  alt="Your Image"
+                  class="img-fluid"
+                />
+              </div>
             </div>
           </div>
         </div>
