Created degins side added carousel(sliders) a few changes can be  made

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
     <!-- Main -->
     <main>
+      <!-- Home -->
       <div class="main-body">
         <div class="container">
           <div class="row">
@@ -110,6 +111,81 @@
           </div>
         </div>
       </div>
+      <!-- Home End -->
+
+      <!-- Designs -->
+      <div class="container designs-div">
+        <div class="container designs-title">
+          <h2 class="text-primary text-center">
+            Ən çox tələb görən CV dizaynları
+          </h2>
+        </div>
+        <div class="container">
+          <div class="container mt-4">
+            <div
+              id="imageCarousel"
+              class="carousel slide"
+              data-bs-ride="carousel"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <div class="row">
+                    <div class="col-md-4">
+                      <img src="/images/cv.jpg" class="img-fluid" alt="Image 1" />
+                    </div>
+                    <div class="col-md-4">
+                      <img src="/images/cv.jpg" class="img-fluid" alt="Image 2" />
+                    </div>
+                    <div class="col-md-4">
+                      <img src="/images/cv.jpg" class="img-fluid" alt="Image 3" />
+                    </div>
+                  </div>
+                </div>
+                <!-- Add more carousel items with three images each as needed -->
+                <div class="carousel-item">
+                  <div class="row">
+                    <div class="col-md-4">
+                      <img src="/images/cv.jpg" class="img-fluid" alt="Image 4" />
+                    </div>
+                    <div class="col-md-4">
+                      <img src="/images/cv.jpg" class="img-fluid" alt="Image 5" />
+                    </div>
+                    <div class="col-md-4">
+                      <img src="/images/cv.jpg" class="img-fluid" alt="Image 6" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <a
+                class="carousel-control-prev"
+                href="#imageCarousel"
+                role="button"
+                data-bs-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Previous</span>
+              </a>
+              <a
+                class="carousel-control-next"
+                href="#imageCarousel"
+                role="button"
+                data-bs-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="visually-hidden">Next</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Designs End -->
     </main>
     <!-- Main End -->
 
