--- a/index.html
+++ b/index.html
@@ -129,29 +129,55 @@
             >
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <div class="row">
+                  <!-- Bu hisse backend Foreach -->
+                  <div class="row design-examples">
                     <div class="col-md-4">
-                      <img src="/images/cv.jpg" class="img-fluid" alt="Image 1" />
+                      <img
+                        src="/images/cv.jpg"
+                        class="img-fluid"
+                        alt="Image 1"
+                      />
                     </div>
                     <div class="col-md-4">
-                      <img src="/images/cv.jpg" class="img-fluid" alt="Image 2" />
+                      <img
+                        src="/images/cv.jpg"
+                        class="img-fluid"
+                        alt="Image 2"
+                      />
                     </div>
                     <div class="col-md-4">
-                      <img src="/images/cv.jpg" class="img-fluid" alt="Image 3" />
+                      <img
+                        src="/images/cv.jpg"
+                        class="img-fluid"
+                        alt="Image 3"
+                      />
                     </div>
                   </div>
                 </div>
+                <!-- Backend Foreach -->
                 <!-- Add more carousel items with three images each as needed -->
                 <div class="carousel-item">
-                  <div class="row">
+                  <div class="row design-examples">
                     <div class="col-md-4">
-                      <img src="/images/cv.jpg" class="img-fluid" alt="Image 4" />
+                      <img
+                        src="/images/cv.jpg"
+                        class="img-fluid"
+                        alt="Image 4"
+                      />
                     </div>
                     <div class="col-md-4">
-                      <img src="/images/cv.jpg" class="img-fluid" alt="Image 5" />
+                      <img
+                        src="/images/cv.jpg"
+                        class="img-fluid"
+                        alt="Image 5"
+                      />
                     </div>
                     <div class="col-md-4">
-                      <img src="/images/cv.jpg" class="img-fluid" alt="Image 6" />
+                      <img
+                        src="/images/cv.jpg"
+                        class="img-fluid"
+                        alt="Image 6"
+                      />
                     </div>
                   </div>
                 </div>
