discount problem flex wrap does not work

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <!-- Left Column -->
             <div class="col-lg-6">
               <div class="main-info">
-                <div class="main-title">
+                <div class="main-title text-primary">
                   <h1>
                     Peşəkar
                     <br />
@@ -212,6 +212,38 @@
       </div>
 
       <!-- Designs End -->
+      <!-- Discount -->
+      <div class="wave-div">
+        <img src="/images/wave-img.png" alt="" />
+      </div>
+      <div class="container">
+        <div class="row align-items-center x">
+          <div class="col-4">
+            <div class="discount-desc">
+              <div class="discount-ad text-primary">
+                <h3>Tələsin!</h3>
+              </div>
+              <div class="discount-ad text-primary">
+                <h2>Endirim <br />Kampaniyası!</h2>
+              </div>
+              <div class="discount-ad text-primary">
+                <h5>Vebsayt üzərindən sifariş edənlərə 10% ENDİRİM!</h5>
+              </div>
+              <div class="">
+                <button class="btn btn-primary" type="submit">
+                  SİFARİŞ ET
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="">
+              <img src="/images/qiz.webp" class="img-fluid" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Discount End -->
     </main>
     <!-- Main End -->
 
