--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
         <img src="/images/wave-img.png" alt="" />
       </div>
       <div class="container">
-        <div class="row align-items-center x">
-          <div class="col-4">
+        <div class=" align-items-center x">
+          <div class="col-md-6">
             <div class="discount-desc">
               <div class="discount-ad text-primary">
                 <h3>Tələsin!</h3>
@@ -236,8 +236,8 @@
               </div>
             </div>
           </div>
-          <div class="col-6">
-            <div class="">
+          <div class="col-md-6">
+            <div class="row">
               <img src="/images/qiz.webp" class="img-fluid" alt="" />
             </div>
           </div>
