--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <img src="/images/wave-img.png" alt="" />
       </div>
       <div class="container">
-        <div class=" align-items-center x">
+        <div class="align-items-center x">
           <div class="col-md-6">
             <div class="discount-desc">
               <div class="discount-ad text-primary">
@@ -244,6 +244,120 @@
         </div>
       </div>
       <!-- Discount End -->
+
+      <!-- Why -->
+      <!-- <div class="container">
+        <div class="container">
+          <h2>Niyə CV-World</h2>
+        </div>
+        <div>
+          <div class="col-md-4">
+            <div>
+              <div>
+                <span><i aria-hidden="true" class="fas fa-star"></i></span>
+              </div>
+              <div class="elementor-icon-box-content">
+                <h3 class="elementor-icon-box-title"></h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4"></div>
+          <div class="col-md-4"></div>
+        </div>
+      </div> -->
+
+      <div class="container why-panel">
+        <div>
+          <h3 class="text-center">Niyə CV-World?</h3>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <div
+              class="border p-3 h-100 d-flex flex-column align-items-center justify-content-center why-div"
+            >
+              <div>
+                <span><i aria-hidden="true" class="fas fa-star"></i></span>
+              </div>
+              <div>
+                <h3 class="text-primary text-center">
+                  <span>99% müştəri məmnuniyyəti</span>
+                </h3>
+                <p class="text-center">
+                  Bizim məqsədimiz yalnız dizayn olunmuş CV (Resume) tərtibi
+                  deyil, həm də daxilində yerləşdirilən məlumatların
+                  oxunaqlılığını artırmaq və sizi uğura <b>bir addım daha</b>
+                  yaxınlaşdırmaqdır.
+                </p>
+              </div>
+              <div>
+                <i class="fa-solid fa-star" style="color: #e73313"></i>
+                <i class="fa-solid fa-star" style="color: #e73313"></i>
+                <i class="fa-solid fa-star" style="color: #e73313"></i>
+                <i class="fa-solid fa-star" style="color: #e73313"></i>
+                <i class="fa-solid fa-star" style="color: #e73313"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <div
+              class="border p-3 h-100 d-flex flex-column align-items-center justify-content-center why-div"
+            >
+              <div>
+                <span
+                  ><i aria-hidden="true" class="fa-solid fa-clock"></i
+                ></span>
+              </div>
+              <div>
+                <h3 class="text-primary text-center">
+                  <span>24 saat ərzində təhvil</span>
+                </h3>
+                <p class="text-center">
+                  Operativlik komandamızın birinci prinsipidir. Qəbul edilən
+                  sifarişlər maksimum <b>24 saat ərzində</b> tam hazırlanıb
+                  təhvil verilir.
+                </p>
+              </div>
+              <div>
+                <i class="fa-solid fa-star" style="color: #e73313"></i>
+                <i class="fa-solid fa-star" style="color: #e73313"></i>
+                <i class="fa-solid fa-star" style="color: #e73313"></i>
+                <i class="fa-solid fa-star" style="color: #e73313"></i>
+                <i class="fa-solid fa-star" style="color: #e73313"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <div
+              class="border p-3 h-100 d-flex flex-column align-items-center justify-content-center why-div"
+            >
+              <div>
+                <span
+                  ><i aria-hidden="true" class="fa-solid fa-circle-check"></i
+                ></span>
+              </div>
+              <div>
+                <h3 class="text-primary text-center">
+                  <span>+56% uğura daha yaxın </span>
+                </h3>
+                <p>
+                  Sadə formatlı CV-lər ilə müqayisədə xüsusi dizayn olunmuş CV
+                  (Resume) ilə siz, digər namizədlər arasında uğura daha yaxın
+                  olacaqsınız.
+                </p>
+              </div>
+              <div>
+                <i class="fa-solid fa-star" style="color: #e73313"></i>
+                <i class="fa-solid fa-star" style="color: #e73313"></i>
+                <i class="fa-solid fa-star" style="color: #e73313"></i>
+                <i class="fa-solid fa-star" style="color: #e73313"></i>
+                <i class="fa-solid fa-star" style="color: #e73313"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Why End-->
     </main>
     <!-- Main End -->
 
