--- a/index.html
+++ b/index.html
@@ -243,37 +243,16 @@
           </div>
         </div>
       </div>
-      <!-- Discount End -->
-
-      <!-- Why -->
-      <!-- <div class="container">
-        <div class="container">
-          <h2>Niyə CV-World</h2>
-        </div>
-        <div>
-          <div class="col-md-4">
-            <div>
-              <div>
-                <span><i aria-hidden="true" class="fas fa-star"></i></span>
-              </div>
-              <div class="elementor-icon-box-content">
-                <h3 class="elementor-icon-box-title"></h3>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4"></div>
-          <div class="col-md-4"></div>
-        </div>
-      </div> -->
+      <!--  -->
 
       <div class="container why-panel">
         <div>
           <h3 class="text-center">Niyə CV-World?</h3>
         </div>
         <div class="row">
-          <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="col-md-4">
             <div
-              class="border p-3 h-100 d-flex flex-column align-items-center justify-content-center why-div"
+              class="border p-3 h-100 d-flex flex-column align-items-center justify-content-centers why-div"
             >
               <div>
                 <span><i aria-hidden="true" class="fas fa-star"></i></span>
@@ -298,9 +277,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="col-md-4">
             <div
-              class="border p-3 h-100 d-flex flex-column align-items-center justify-content-center why-div"
+              class="border p-3 h-100 d-flex flex-column align-items-center justify-content-centers why-div"
             >
               <div>
                 <span
@@ -326,9 +305,9 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-sm-12">
+          <div class="col-md-4">
             <div
-              class="border p-3 h-100 d-flex flex-column align-items-center justify-content-center why-div"
+              class="border p-3 h-100 d-flex flex-column align-items-center justify-content-centers why-div"
             >
               <div>
                 <span
@@ -339,7 +318,7 @@
                 <h3 class="text-primary text-center">
                   <span>+56% uğura daha yaxın </span>
                 </h3>
-                <p>
+                <p class="text-center">
                   Sadə formatlı CV-lər ilə müqayisədə xüsusi dizayn olunmuş CV
                   (Resume) ilə siz, digər namizədlər arasında uğura daha yaxın
                   olacaqsınız.
@@ -358,6 +337,33 @@
       </div>
 
       <!-- Why End-->
+
+      <!-- About -->
+      <div class="about">
+        <div class="container about-content">
+          <div>
+            <h1 class="text-primary text-center">Haqqımızda</h1>
+          </div>
+          <div class="container">
+            <p class="">
+              Azərbaycanda ən sərfəli qiymətlərlə CV hazırlanması xidməti ilə
+              yalnız dizayndan ibarət deyil, həm də mükəmməl və uğurlu CV
+              hazırlayırıq. Müştərilərimizə CV-ni necə tərtib edəcəyimizi
+              müzakirə edib, işəgötürən üçün ən çox diqqət çəkəcək məzmunu
+              məsləhət görürük. Müştərilərimizin məqsədləri və arzularını
+              öyrənirik və bu nəticəyə çatana qədər çalışırıq.
+            </p>
+          </div>
+          <div class="">
+            <h4>
+              <span class="text-primary">
+                Aşağıdakı əlaqə vasitələri ilə bizimlə cv hazırlanması üçün əlaqə saxlaya bilərsiniz.
+              </span>
+            </h4>
+          </div>
+        </div>
+      </div>
+      <!-- About End -->
     </main>
     <!-- Main End -->
 
