social media part

--- a/index.html
+++ b/index.html
@@ -354,18 +354,36 @@
               öyrənirik və bu nəticəyə çatana qədər çalışırıq.
             </p>
           </div>
-          <div class="">
+          <div class="container">
             <h4>
               <span class="text-primary">
                 Aşağıdakı əlaqə vasitələri ilə bizimlə cv hazırlanması üçün əlaqə saxlaya bilərsiniz.
               </span>
             </h4>
           </div>
+          <div class="flex-row mb-3social-media">
+            <div class="p-2 d-flex justify-content-center">
+              <span><i class="fa-brands fa-whatsapp"></i></span>
+            </div>
+            <div class="p-2 d-flex justify-content-center">
+              <span><i class="fa-brands fa-instagram"></i></span>
+            </div>
+            <div class="p-2 d-flex justify-content-center">
+              <span><i class="fa-brands fa-facebook"></i></span>
+            </div>
+          </div>
         </div>
       </div>
       <!-- About End -->
     </main>
     <!-- Main End -->
+
+
+
+    <!-- Footer -->
+
+
+    <!-- Footer End -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
