--- a/index.html
+++ b/index.html
@@ -357,18 +357,19 @@
           <div class="container">
             <h4>
               <span class="text-primary">
-                Aşağıdakı əlaqə vasitələri ilə bizimlə cv hazırlanması üçün əlaqə saxlaya bilərsiniz.
+                Aşağıdakı əlaqə vasitələri ilə bizimlə cv hazırlanması üçün
+                əlaqə saxlaya bilərsiniz.
               </span>
             </h4>
           </div>
-          <div class="flex-row mb-3social-media">
-            <div class="p-2 d-flex justify-content-center">
+          <div class="row social-media">
+            <div class="col-md-4 p-2 d-flex justify-content-center col-md4">
               <span><i class="fa-brands fa-whatsapp"></i></span>
             </div>
-            <div class="p-2 d-flex justify-content-center">
+            <div class="col-md-4 p-2 d-flex justify-content-center col-md4">
               <span><i class="fa-brands fa-instagram"></i></span>
             </div>
-            <div class="p-2 d-flex justify-content-center">
+            <div class="col-md-4 p-2 d-flex justify-content-center col-md4">
               <span><i class="fa-brands fa-facebook"></i></span>
             </div>
           </div>
@@ -378,10 +379,11 @@
     </main>
     <!-- Main End -->
 
-
+    <div class="footer">
+      <div class="container"></div>
+    </div>
 
     <!-- Footer -->
-
 
     <!-- Footer End -->
 
