--- a/index.html
+++ b/index.html
@@ -364,13 +364,22 @@
           </div>
           <div class="row social-media">
             <div class="col-md-4 p-2 d-flex justify-content-center col-md4">
-              <span><i class="fa-brands fa-whatsapp"></i></span>
+              <div class="socila-media-icons whatsapp-icon">
+                <span><i class="fa-brands fa-whatsapp"></i></span>
+
+              </div>
             </div>
             <div class="col-md-4 p-2 d-flex justify-content-center col-md4">
-              <span><i class="fa-brands fa-instagram"></i></span>
+              <div class="socila-media-icons instagram-icon">
+                <span><i class="fa-brands fa-instagram"></i></span>
+
+              </div>
             </div>
             <div class="col-md-4 p-2 d-flex justify-content-center col-md4">
-              <span><i class="fa-brands fa-facebook"></i></span>
+              <div class="socila-media-icons facebook-icon">
+                <span><i class="fa-brands fa-facebook"></i></span>
+
+              </div>
             </div>
           </div>
         </div>
