changed names of classes

--- a/index.html
+++ b/index.html
@@ -336,10 +336,10 @@
 
   </div>
   <div class="footer-border row">
-    <div class="col-md-4 cop-p">
+    <div class="col-md-4 left-p">
       <p>Copyright © 2023</p>
     </div>
-    <div class="col-md-4 dop-p">
+    <div class="col-md-4 right-p">
       <p>CV-Land</p>
     </div>
   </div>
