--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="col-md-4">
           <div class="border p-3 h-100 d-flex flex-column align-items-center justify-content-centers why-div">
             <div>
-              <span><i aria-hidden="true" class="fas fa-star"></i></span>
+              <span><i aria-hidden="true" class="fas fa-star why-icons"></i></span>
             </div>
             <div>
               <h3 class="text-primary text-center">
@@ -211,7 +211,7 @@
         <div class="col-md-4">
           <div class="border p-3 h-100 d-flex flex-column align-items-center justify-content-centers why-div">
             <div>
-              <span><i aria-hidden="true" class="fa-solid fa-clock"></i></span>
+              <span><i aria-hidden="true" class="fa-solid fa-clock why-icons"></i></span>
             </div>
             <div>
               <h3 class="text-primary text-center">
@@ -235,7 +235,7 @@
         <div class="col-md-4">
           <div class="border p-3 h-100 d-flex flex-column align-items-center justify-content-centers why-div">
             <div>
-              <span><i aria-hidden="true" class="fa-solid fa-circle-check"></i></span>
+              <span><i aria-hidden="true" class="fa-solid fa-circle-check why-icons"></i></span>
             </div>
             <div>
               <h3 class="text-primary text-center">
