about done at least for now

--- a/index.html
+++ b/index.html
@@ -286,9 +286,10 @@
             </span>
           </h4>
         </div>
+        <!--  -->
         <div class="row social-media">
-          <div class="col-md-4 p-2 d-flex justify-content-center col-md4">
-            <div class="socila-media-icons whatsapp-icon">
+          <div class="col-md-4 p-2 d-flex justify-content-center col-md4 social-media-icons">
+            <div class=" whatsapp-icon">
               <span>
                 <a href="#">
 
@@ -297,8 +298,9 @@
 
             </div>
           </div>
-          <div class="col-md-4 p-2 d-flex justify-content-center col-md4">
-            <div class="socila-media-icons instagram-icon">
+          <!--  -->
+          <div class="col-md-4 p-2 d-flex justify-content-center col-md4 social-media-icons">
+            <div class="instagram-icon">
               <span>
                 <a href="#">
                   <i class="fa-brands fa-instagram"></i></span>
@@ -306,14 +308,16 @@
 
             </div>
           </div>
-          <div class="col-md-4 p-2 d-flex justify-content-center col-md4">
-            <div class="socila-media-icons facebook-icon">
+          <!--  -->
+          <div class="col-md-4 p-2 d-flex justify-content-center col-md4 social-media-icons">
+            <div class="facebook-icon">
               <span><a href="#">
                   <i class="fa-brands fa-facebook"></i></span>
               </a>
 
             </div>
           </div>
+          <!--  -->
         </div>
       </div>
     </div>
