--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="#">Əsas</a>
           </li>
           <li class="nav-item nav-item">
-            <a class="nav-link" href="#">Kataloq</a>
+            <a class="nav-link" href="/catalog.html">Kataloq</a>
           </li>
           <li class="nav-item nav-item">
             <a class="nav-link" href="#">Vakansiyalar</a>
