Catalog done footer still needs some changes

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <img src="/images/cv.jpg" class="img-fluid" alt="Image 1" />
                   </div>
                   <div class="col-md-4">
-                    <img src="/images/cv.jpg" class="img-fluid" alt="Image 2" />
+                    <img src="/images/cv-1.jpg" class="img-fluid" alt="Image 2" />
                   </div>
                   <div class="col-md-4">
                     <img src="/images/cv.jpg" class="img-fluid" alt="Image 3" />
