--- a/catalog.html
+++ b/catalog.html
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item nav-item">
-            <a class="nav-link" href="#">Əsas</a>
+            <a class="nav-link" href="index.html">Əsas</a>
           </li>
           <li class="nav-item nav-item">
             <a class="nav-link" href="#">Kataloq</a>
@@ -51,37 +51,109 @@
 
   <!-- Main -->
   <main>
+    <!-- Catalog Main -->
+    <div class="container">
+      <figure>
+        <div class="container mt-5">
+          <div class="row">
+            <div class="col-md-4 mb-4">
+              <div class="image-container">
+                <img src="/images/cv-1.jpg" alt="Image 1" class="img-fluid image" data-toggle="modal" data-target="#myModal1">
+              </div>
+            </div>
+            <div class="col-md-4 mb-4">
+              <div class="image-container">
+                <img src="/images/cv.jpg" alt="Image 2" class="img-fluid image" data-toggle="modal" data-target="#myModal2">
+              </div>
+            </div>
+            <div class="col-md-4 mb-4">
+              <div class="image-container">
+                <img src="/images/cv-1.jpg" alt="Image 3" class="img-fluid image" data-toggle="modal" data-target="#myModal3">
+              </div>
+            </div>
+          </div>
+        </div>
 
-  </main>
-  <!-- Main End -->
+        <!-- Modal for Image 1 -->
+        <div class="modal fade" id="myModal1">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title">Image 1</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+              </div>
+              <div class="modal-body">
+                <img src="/images/cv.jpg" alt="Image 1" class="img-fluid enlarged-image">
+              </div>
+            </div>
+          </div>
+        </div>
 
-   <!-- Footer -->
-   <div class="footer">
-    <div class="col-md-4">
-      <div><img src="/images/logo.webp" alt=""></div>
-    </div>
-    <div class="col-md-4">
-    </div>
-    <div class="col-md-4">
-    </div>
+        <!-- Modal for Image 2 -->
+        <div class="modal fade" id="myModal2">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title">Image 2</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+              </div>
+              <div class="modal-body">
+                <img src="/images/cv-1.jpg" alt="Image 2" class="img-fluid enlarged-image">
+              </div>
+            </div>
+          </div>
+        </div>
 
+        <!-- Modal for Image 3 -->
+        <div class="modal fade" id="myModal3">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title">Image 3</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+              </div>
+              <div class="modal-body">
+                <img src="/images/cv.jpg" alt="Image 3" class="img-fluid enlarged-image">
+              </div>
+            </div>
+          </div>
+        </div>
+</body>
+
+</html>
+</figure>
+
+</div>
+<!-- Catalog Main End -->
+</main>
+<!-- Main End -->
+
+<!-- Footer -->
+<div class="footer">
+  <div class="col-md-4">
+    <div><img src="/images/logo.webp" alt=""></div>
   </div>
-  <div class="footer-border row">
-    <div class="col-md-4 left-p">
-      <p>Copyright © 2023</p>
-    </div>
-    <div class="col-md-4 right-p">
-      <p>CV-Land</p>
-    </div>
+  <div class="col-md-4">
   </div>
-  <!-- Footer End -->
+  <div class="col-md-4">
+  </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="/js/main.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"></script>
+</div>
+<div class="footer-border row">
+  <div class="col-md-4 left-p">
+    <p>Copyright © 2023</p>
+  </div>
+  <div class="col-md-4 right-p">
+    <p>CV-Land</p>
+  </div>
+</div>
+<!-- Footer End -->
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="/js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 
 </html>
