--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>cv-World</title>
+  <title>CV-World</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -31,7 +31,7 @@
             <a class="nav-link" href="index.html">Əsas</a>
           </li>
           <li class="nav-item nav-item">
-            <a class="nav-link" href="#">Kataloq</a>
+            <a class="nav-link" href="catalog.html">Kataloq</a>
           </li>
           <li class="nav-item nav-item">
             <a class="nav-link" href="#">Vakansiyalar</a>
@@ -40,7 +40,7 @@
             <a class="nav-link" href="#">Vakansiya Paylaş</a>
           </li>
           <li class="nav-item nav-item">
-            <a class="nav-link" href="#">Əlaqə</a>
+            <a class="nav-link" href="contact.html">Əlaqə</a>
           </li>
         </ul>
       </div>
