--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>cv-World</title>
+  <title>CV-World</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -28,7 +28,7 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item nav-item">
-            <a class="nav-link" href="#">Əsas</a>
+            <a class="nav-link" href="index.html">Əsas</a>
           </li>
           <li class="nav-item nav-item">
             <a class="nav-link" href="/catalog.html">Kataloq</a>
@@ -40,7 +40,7 @@
             <a class="nav-link" href="#">Vakansiya Paylaş</a>
           </li>
           <li class="nav-item nav-item">
-            <a class="nav-link" href="#">Əlaqə</a>
+            <a class="nav-link" href="contact.html">Əlaqə</a>
           </li>
         </ul>
       </div>
@@ -325,9 +325,7 @@
   </main>
   <!-- Main End -->
 
-  <div class="footer">
-    <div class="container"></div>
-  </div>
+ 
 
   <!-- Footer -->
   <div class="footer">
