--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,41 @@
     <!-- Header End -->
     <!-- Main -->
     <main>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div>
+                        <h1 class="text-primary">
+                            Əlaqə
+                        </h1>
+                    </div>
+                    <div>
+                        <p>Sizinlə ilk tanışlıq CV-niz üzərindən olduğuna görə, bu tanışlıqda maksimum özünüzü
+                            göstərmək üçün bizə müraciət edə bilərsiniz.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 contact-input">
+                    <form action="">
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label">Email Addres</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1"
+                                placeholder="Email Addres">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label">Mövzu</label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1"
+                                placeholder="Mövzu">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleFormControlTextarea1" class="form-label">Qeyd</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                        <button>Göndər</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- Main End -->
 
