--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
   <!-- Footer -->
   <div class="footer">
     <div class="col-md-4">
-      <div><img src="/images/logo.webp" alt=""></div>
+      <div class="container-sm"><img src="/images/logo.png" alt=""></div>
     </div>
     <div class="col-md-4">
     </div>
